--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <header>
         <div class="menu contenedor">
-            <a href="#" class="logo"><img src="imagenes birra/logo.svg" alt=""></a>
+            <a href="#" class="logo"><img src="imagenesBirra/logo.svg" alt=""></a>
             <input type="checkbox" id="menu">
             <label for="menu">
-                <img src="imagenes birra/menu.png"  class= "menu-icono" alt="">
+                <img src="imagenesBirra/menu.png"  class= "menu-icono" alt="">
             </label>
             <nav class="navBar">
                 <ul>
@@ -30,16 +30,16 @@
             <div class="swiper mySwiper-1">
                 <div class="swiper-wrapper">
 
-                    <div class="swiper-slider">
-                        <img src="imagenes birra/slider1.jpg" alt="">
+                    <div class="swiper-slide">
+                        <img src="imagenesBirra/slider1.jpg" alt="" class = "slide">
                     </div>
 
-                    <div class="swiper-slider">
-                        <img src="imagenes birra/slider2.jpg" alt="">
+                    <div class="swiper-slide">
+                        <img src="imagenesBirra/slider2.jpg" alt="" class = "slide">
                     </div>
 
-                    <div class="swiper-slider">
-                        <img src="imagenes birra/slider3.jpg" alt="">
+                    <div class="swiper-slide">
+                        <img src="imagenesBirra/slider3.jpg" alt="" class = "slide">
                     </div>
 
                 </div>
@@ -47,7 +47,7 @@
                 <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
             </div>
-            <a href="#" class="enlaces">Mas informacion</a>
+            <a href="#" class="enlace">Mas informacion</a>
         </div>
 
     </header>
@@ -55,9 +55,9 @@
     <section class="cervezas">
         <div class="swiper mySwiper-2 contenedor">
             <div class="swiper-wrapper">
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b1.png" alt="">
+                        <img src="imagenesBirra/b1.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -66,9 +66,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b2.png" alt="">
+                        <img src="imagenesBirra/b2.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -77,9 +77,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b3.png" alt="">
+                        <img src="imagenesBirra/b3.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -88,9 +88,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b4.png" alt="">
+                        <img src="imagenesBirra/b4.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -99,9 +99,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b5.png" alt="">
+                        <img src="imagenesBirra/b5.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -110,9 +110,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b3.png" alt="">
+                        <img src="imagenesBirra/b3.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -121,9 +121,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b2.png" alt="">
+                        <img src="imagenesBirra/b2.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -139,7 +139,7 @@
     </section>
 
     <section class="nosotro">
-        <div class="nosotros-txt contenedor">
+        <div class="nosotro-txt contenedor">
             <h2>nosotros</h2>
             <p>La mejor <br> <span>Cerveceria</span></p>
         </div>
@@ -151,9 +151,9 @@
     <section class="cervezas">
         <div class="swiper mySwiper-2 contenedor">
             <div class="swiper-wrapper">
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b1.png" alt="">
+                        <img src="imagenesBirra/b1.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -162,9 +162,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b2.png" alt="">
+                        <img src="imagenesBirra/b2.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -173,9 +173,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b3.png" alt="">
+                        <img src="imagenesBirra/b3.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -184,9 +184,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b4.png" alt="">
+                        <img src="imagenesBirra/b4.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -195,9 +195,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b5.png" alt="">
+                        <img src="imagenesBirra/b5.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -206,9 +206,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b3.png" alt="">
+                        <img src="imagenesBirra/b3.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -217,9 +217,9 @@
                     </div>
                 </div>
 
-                <div class="swiper-slider">
+                <div class="swiper-slide">
                     <div class="producto">
-                        <img src="imagenes birra/b2.png" alt="">
+                        <img src="imagenesBirra/b2.png" alt="">
                         <div class="producto-txt">
                             <h4>birra</h4>
                             <p>ipa</p>
@@ -237,7 +237,7 @@
     <footer class="footer contenedor">
         <hr>
         <div class="footer-txt">
-            <img src="imagenes birra/logo.svg" alt="">
+            <img src="imagenesBirra/logo.svg" alt="">
             <div class="links">
                 <ul>
                     <li>inicio</li>
@@ -245,9 +245,9 @@
                     <li>productos</li>
                 </ul>
                 <div class="sociales">
-                    <img src="imagenes birra/s1.svg" alt="">
-                    <img src="imagenes birra/s2.svg" alt="">
-                    <img src="imagenes birra/s3.svg" alt="">
+                    <img src="imagenesBirra/s1.svg" alt="">
+                    <img src="imagenesBirra/s2.svg" alt="">
+                    <img src="imagenesBirra/s3.svg" alt="">
                 </div>
                 <p>ignacio zanetti</p>
             </div>
